RESOLVED FIXED127905
WebPage::determinePrimarySnapshottedPlugIn is slow
https://bugs.webkit.org/show_bug.cgi?id=127905
Summary WebPage::determinePrimarySnapshottedPlugIn is slow
Antti Koivisto
Reported 2014-01-30 05:37:48 PST
It is taking shotgun approach to hit testing. PLT: Running Time Self Symbol Name 132.0ms 0.8% 0,0 Main Thread 0x8a984 132.0ms 0.8% 0,0 WebKit::WebPage::determinePrimarySnapshottedPlugIn() 130.0ms 0.8% 0,0 WebCore::RenderView::hitTest(WebCore::HitTestRequest const&, WebCore::HitTestResult&) 1.0ms 0.0% 0,0 WebCore::HTMLPlugInImageElement::restartSimilarPlugIns() 1.0ms 0.0% 0,0 WTF::RunLoop::TimerBase::start(double, bool)
Attachments
patch (15.53 KB, patch)
2014-01-30 05:49 PST, Antti Koivisto
andersca: review+
Antti Koivisto
Comment 1 2014-01-30 05:49:56 PST
WebKit Commit Bot
Comment 2 2014-01-30 05:52:28 PST
Attachment 222662 [details] did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebKit2/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebKit2/ChangeLog:13: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebKit2/ChangeLog:14: Line contains tab character. [whitespace/tab] [5] Total errors found: 4 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3 2014-01-30 07:49:45 PST
Tim Horton
Comment 4 2014-01-30 11:04:38 PST
Comment on attachment 222662 [details] patch So much better! Thanks, Antti :)
Note You need to log in before you can comment on or make changes to this bug.