WebPage::determinePrimarySnapshottedPlugIn is slow https://bugs.webkit.org/show_bug.cgi?id=127905

Source/WebCore:

Reviewed by Anders Carlsson.

* WebCore.exp.in: New exports
* WebCore.xcodeproj/project.pbxproj:
* html/HTMLPlugInImageElement.h:
(WebCore::HTMLPlugInImageElement>): Add isElementOfType<>

Source/WebKit2:

Reviewed by Anders Carlsson.

PLT before:
132.0ms  0.8% 0,0   WebKit::WebPage::determinePrimarySnapshottedPlugIn()
130.0ms  0.8% 0,0    WebCore::RenderView::hitTest(WebCore::HitTestRequest const&, WebCore::HitTestResult&)

After:
7.0ms    0.0% 0,0   WebKit::WebPage::determinePrimarySnapshottedPlugIn()
3.0ms    0.0% 0,0    WebCore::RenderView::hitTest(WebCore::HitTestRequest const&, WebCore::HitTestResult&)

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::determinePrimarySnapshottedPlugIn):

    Instead of shotgunning the page with hit tests, do a DOM crawl for plugins
    and hit test the centers.



Canonical link: https://commits.webkit.org/145907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163082 268f45cc-cd09-0410-ab3c-d52691b4dbfc